--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
                 <link rel="stylesheet" href="./style.css" />
                 <script src="script.js" defer></script>
             </head>
+            
         <body>
             <div id="contenedor">
                 <div id="calculadora">
                     <div class="contenido">
+                        <div class="division"></div>
+                        <div class="division"></div>
                         <h1>Hidratación Basal</h1>
                         <p class="item">Completa todos los datos</p>
                         <input class="item" id="peso" type="number" placeholder="Peso en kg" />
